--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Loving Monsters",
+  "name": "loving_monsters",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
