--- a/.eslintrc
+++ b/.eslintrc
@@ -12,25 +12,48 @@
     "browser": true,
     "jest": true
   },
-  "plugins": ["babel", "react"],
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "plugins": [
+    "babel",
+    "react"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
   "rules": {
     "no-console": "warn",
     "indent": [
       "error",
-      2,
+      4,
       {
         "SwitchCase": 1
       }
     ],
-    "quotes": ["error", "single"],
-    "semi": ["error", "always"],
-    "space-in-parens": ["error"],
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "space-in-parens": [
+      "error"
+    ],
     "space-infix-ops": "error",
-    "object-curly-spacing": ["error", "always"],
+    "object-curly-spacing": [
+      "error",
+      "always"
+    ],
     "comma-spacing": "error",
-    "space-before-function-paren": ["error", "never"],
-    "eol-last": ["error", "always"],
+    "space-before-function-paren": [
+      "error",
+      "never"
+    ],
+    "eol-last": [
+      "error",
+      "always"
+    ],
     "keyword-spacing": [
       "error",
       {
@@ -58,13 +81,22 @@
         }
       }
     ],
-    "arrow-spacing": ["error", { "before": true, "after": true }],
+    "arrow-spacing": [
+      "error",
+      {
+        "before": true,
+        "after": true
+      }
+    ],
     "array-bracket-spacing": "error",
     "prefer-const": "error",
     "no-var": "error",
     "rest-spread-spacing": "error",
     "prefer-arrow-callback": "error",
-    "object-shorthand": ["error", "always"],
+    "object-shorthand": [
+      "error",
+      "always"
+    ],
     "max-len": "error",
     "jsx-quotes": "error",
     "babel/no-invalid-this": 1,
