--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "socket.io-client": "^3.1.2"
   }
 }
